bug: fix text-align

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,7 @@
       margin-left: 20px;
       width: 200px;
       padding: 3px 0px;
+      text-align: center;
     }
   }
 
